--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "nodemon": "^2.0.19",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "url-metadata": "^2.5.0"
   },
   "description": ""
 }
